# engr387cp2

./: .gitignore  README.md  main.py  pyproject.toml
src/: cp2_problems.py  lodecci.py
